Bug fixes on sidebar
1. Display sub form on mobile view
2. Adjust z index for comment form to prevent overlapping with sidbar content

--- a/content/css/comment.css
+++ b/content/css/comment.css
@@ -1,5 +1,9 @@
 @import 'gitalk/dist/gitalk.css';
 
+.gt-container .gt-meta {
+    z-index: 0;
+}
+
 .gt-container .gt-link {
     border-bottom: 1px dotted #4C9A2A;
 }
